Added create order handler

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "peteski",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.410.0",
     "claudia-api-builder": "^4.1.2"
   },
   "devDependencies": {
